# bridge-mvp

./: .gitignore  LICENSE  README.md  bridge_cli.py  contextdump.md  jscpd-report.json  pyproject.toml  setup.py
bridge_cli/: __init__.py  analyzer.py  ascii_art.py  cli.py  repo_fetcher.py  report.py  server.py  utils.py  visualizer.py
bridge_cli/analyzers/: __init__.py  churn.py  complexity.py  duplication.py  health.py  overview.py  security.py
tests/: test_analyzer.py  test_churn.py  test_report.py
web/: app.js  index.html
